# tree-sitter-java-manifest

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-java-manifest.pc.in  tree-sitter-manifest.pc.in
bindings/c/tree_sitter/: tree-sitter-java-manifest.h  tree-sitter-manifest.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_java_manifest/: __init__.py  binding.c
bindings/python/tree_sitter_manifest/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJavaManifestTests/: TreeSitterJavaManifestTests.swift
bindings/swift/TreeSitterManifestTests/: TreeSitterManifestTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: manifest_test.txt
